List view creation initiated

--- a/automation/templates/automation/scheduling_form.html
+++ b/automation/templates/automation/scheduling_form.html
@@ -1,10 +1,9 @@
-{% extends "scheduling/base.html" %}
-
+{% extends "automation/base.html" %}
 {% load bootstrap_tags %}
-
 {% block title %}New reminder{% endblock title %}
 
 {% block content %}
+{{block.super}}
   <div class="row">
     <div class="col-lg-9">
       <div class="page-header">
