--- a/automation/templates/automation/scheduling_form.html
+++ b/automation/templates/automation/scheduling_form.html
@@ -1,9 +1,10 @@
 {% extends "automation/base.html" %}
+
 {% load bootstrap_tags %}
 
+{% block title %}New reminder{% endblock title %}
 
 {% block content %}
-{{block.super}}
   <div class="row">
     <div class="col-lg-9">
       <div class="page-header">
@@ -35,6 +36,7 @@
     </div>
   </div>
 {% endblock %}
+
 {% block page_css %}
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css" />
 {% endblock %}
