Detail and Update views created and routes setup. Mapped to templates

--- a/automation/templates/automation/index.html
+++ b/automation/templates/automation/index.html
@@ -8,7 +8,7 @@
       
       <h1>SMS Scheduling with Django</h1>
 
-      <p>This application iplements SMS reminders with <a href="http://twilio.com">Twilio</a> in Django.
+      <p>This application implements SMS scheduling with <a href="http://twilio.com">Twilio</a> in Django.
 
       <p><a class="btn btn-primary btn-xs" href="{% url 'new_schedule' %}">Create a new Appointment</a> to see how it works!</p>
 
