Absolute URL for update and delete views defined and reverse lazy url defined as well

--- a/automation/templates/automation/scheduling_list.html
+++ b/automation/templates/automation/scheduling_list.html
@@ -42,7 +42,7 @@
         </tbody>
       </table>
 
-      <a class="btn btn-primary" href="{% url 'new_schedule %}">New</a>
+      <a class="btn btn-primary" href="{% url 'new_schedule' %}">New</a>
     </div>
   </div>
 {% endblock %}
