--- a/automation/templates/automation/index.html
+++ b/automation/templates/automation/index.html
@@ -10,7 +10,7 @@
 
       <p>This application implements SMS scheduling with <a href="http://twilio.com">Twilio</a> in Django.
 
-      <p><a class="btn btn-primary btn-xs" href="{% url 'new_schedule' %}">Create a new Appointment</a> to see how it works!</p>
+      <p><a class="btn btn-primary btn-xs" href="{% url 'new_schedule' %}">Create a new Schedule</a> to see how it works!</p>
 
     </div>
 
