--- a/automation/templates/automation/scheduling_detail.html
+++ b/automation/templates/automation/scheduling_detail.html
@@ -1,28 +1,28 @@
-{% extends "base.html" %}
+{% extends "automation/base.html" %}
 
-{% block title %}{{ appointment }}{% endblock title %}
+{% block title %}{{ schedule }}{% endblock title %}
 
 {% block content %}
   <div class="row">
     <div class="col-lg-9">
       <div class="page-header">
-        <h1>Appointment</h1>
+        <h1>Schedule</h1>
       </div>
 
       <dl class="dl-horizontal">
         <dt><strong>Name:</strong></dt>
-        <dd>{{ appointment.name }}</dd>
+        <dd>{{ schedule.name }}</dd>
         <dt><strong>Phone number:</strong></dt>
-        <dd>{{ appointment.phone_number }}</dd>
+        <dd>{{ schedule.phone_number }}</dd>
         <dt><strong>Time:</strong></dt>
-        <dd>{{ appointment.time }}</dd>
+        <dd>{{ schedule.time }}</dd>
         <dt><strong>Time zone:</strong></dt>
-        <dd>{{ appointment.time_zone }}</dd>
+        <dd>{{ schedule.time_zone }}</dd>
       </dl>
 
-      <a class="btn btn-default" href="{% url 'list_appointments' %}">Back</a>
-      <a class="btn btn-default" href="{% url 'edit_appointment' appointment.id %}">Edit</a>
-      <a class="btn btn-danger" data-method="delete" href="{% url 'delete_appointment' appointment.id %}">Delete</a>
+      <a class="btn btn-default" href="{% url 'list_schedules' %}">Back</a>
+      <a class="btn btn-default" href="{% url 'edit_schedule' schedule.id %}">Edit</a>
+      <a class="btn btn-danger" data-method="delete" href="{% url 'delete_schedule' schedule.id %}">Delete</a>
     </div>
   </div>
 {% endblock %}
