Dramatiq settings modified to allow minutes based scheduling

--- a/automation/templates/automation/appointment_confirm_delete.html
+++ b/automation/templates/automation/appointment_confirm_delete.html
@@ -1,6 +1,6 @@
-{% extends "automation/base.html" %}
+{% extends "base.html" %}
 
-{% block title %}{{ schedule }}{% endblock title %}
+{% block title %}{{ appointment }}{% endblock title %}
 
 {% block content %}
   <div class="row">
