--- a/automation/templates/base.html
+++ b/automation/templates/base.html
@@ -1,15 +1,19 @@
 {% load bootstrap4 %}
-
+{% load bootstrap3 %}
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}{% endblock title %} - Mookh Communications</title>
+    <title>{% block title %}{% endblock title %} - SMS Schedule Reminders</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
     <!-- CSS -->
     {% bootstrap_css %}
 
@@ -28,8 +32,8 @@
         <a class="navbar-brand" href="/">SMS Reminders</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'new_schedule' %}">New</a></li>
-            
+            <li><a href="{% url 'new_appointment' %}">New</a></li>
+            <li><a href="{% url 'list_appointments' %}">List</a></li>
           </ul>
         </div>
       </div>
@@ -48,7 +52,7 @@
       {% block content %}{% endblock content %}
 
       <footer>
-        <p>&copy; Company 2019</p>
+        <p>&copy; Mookh 2019</p>
       </footer>
 
     </div> <!-- /container -->
