--- a/automation/templates/automation/base.html
+++ b/automation/templates/automation/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap4 %}
+
 
 
 <!DOCTYPE html>
@@ -11,7 +11,12 @@
 
     
     <!-- CSS -->
-    {% bootstrap_css %}
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
 
     {% block page_css %}{% endblock %}
   </head>
@@ -54,7 +59,7 @@
     </div> <!-- /container -->
 
     <!-- JavaScript -->
-    {% bootstrap_javascript jquery=1 %}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     {% block page_js %}{% endblock %}
 
