Relationships established between Group and user models. Routes created for rendering user and group views

--- a/automation/templates/automation/index.html
+++ b/automation/templates/automation/index.html
@@ -8,9 +8,10 @@
       
       <h1>SMS Scheduling with Django</h1>
 
-      <p>This application implements SMS scheduling with <a href="http://twilio.com">Twilio</a> in Django.
+      <p>This application implements SMS & Email scheduling with <a href="http://twilio.com">Twilio</a> and <a href="http://sendgrid.com">Sendgrid</a> in Django.
 
-      <p><a class="btn btn-primary btn-xs" href="{% url 'new_schedule' %}">Create a new Schedule</a> to see how it works!</p>
+      <p><a class="btn btn-primary btn-xs" href="{% url 'new_schedule' %}">Create SMS Schedule</a> to see how it works!</p>
+      <p><a class="btn btn-primary btn-xs" href="{% url 'email' %}">Send Emails</a> to see how it works!</p>
 
     </div>
 
