--- a/automation/templates/automation/base.html
+++ b/automation/templates/automation/base.html
@@ -1,15 +1,20 @@
 
-
+{% load bootstrap4 %}
+{% load bootstrap3 %}
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}{% endblock title %} - Mookh Communications</title>
+    <title>{% block title %}{% endblock title %} - SMS Schedule Reminders</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
     <!-- CSS -->
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -30,11 +35,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">SMS Reminders</a>
+        <a class="navbar-brand" href="/">Mookh Communications</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'new_schedule' %}">New</a></li>
-            
+            <li><a href="{% url 'new_schedule' %}">New SMS</a></li>
+            <li><a href="{% url 'list_schedules' %}">List SMS Schedules</a></li>
+            <li><a href="{% url 'email' %}">Send Email</a></li>
           </ul>
         </div>
       </div>
@@ -53,7 +59,7 @@
       {% block content %}{% endblock content %}
 
       <footer>
-        <p>&copy; Company 2019</p>
+        <p>&copy; Mookh 2019</p>
       </footer>
 
     </div> <!-- /container -->
