--- a/automation/templates/base.html
+++ b/automation/templates/base.html
@@ -35,11 +35,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">SMS Reminders</a>
+        <a class="navbar-brand" href="/">Mookh Communications</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'new_schedule' %}">New</a></li>
-            <li><a href="{% url 'list_schedules' %}">List</a></li>
+            <li><a href="{% url 'new_schedule' %}">New SMS</a></li>
+            <li><a href="{% url 'list_schedules' %}">List SMS Schedules</a></li>
             <li><a href="{% url 'email' %}">Send Email</a></li>
           </ul>
         </div>
