Email delete and update views created

--- a/automation/templates/automation/base.html
+++ b/automation/templates/automation/base.html
@@ -38,7 +38,9 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{% url 'new_schedule' %}">New SMS</a></li>
+            <li><a href="{% url 'new_emailschedule' %}">New Email</a></li>
             <li><a href="{% url 'list_schedules' %}">List SMS Schedules</a></li>
+            <li><a href="{% url 'list_emailschedules' %}">List Email Schedules</a></li>
             <li><a href="{% url 'email' %}">Send Email</a></li>
           </ul>
         </div>
