Landing page designed

--- a/automation/templates/automation/scheduling_form.html
+++ b/automation/templates/automation/scheduling_form.html
@@ -1,4 +1,6 @@
-{% extends "automation/base.html" %}
+<!-- {% extends "automation/base.html" %} -->
+{% load bootstrap4 %}
+{% load bootstrap3 %}
 
 {% load bootstrap_tags %}
 
